# venoapp-bridge

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
bridge-electron/: main.js  package.json  preload.js  ui.html
bridge-node/: package.json  server.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  mdns.rs  printer.rs  supabase.rs  ws_server.rs
src/hooks/: useVenoBridge.js
