[package]
name = "venoapp-bridge"
version = "1.0.0"
description = "VenoApp Bridge - Local WebSocket/print bridge for restaurant POS"
authors = ["Marius Cautis <marius.cautis@gmail.com>"]
edition = "2021"

[[bin]]
name = "venoapp-bridge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
mdns-sd = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
